--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@ Oeliander/Oeliander.Core/.vs
 Oeliander/Oeliander.Core/obj
 Oeliander/Oeliander.Core/bin
 Oeliander/.vs
-utils/BuiltUtils
+utils/BuiltUtils/*
