Added Directory Viewer & Better SSH Command Response

--- a/Oeliander/Oeliander.Core/OelianderUI.Core.csproj
+++ b/Oeliander/Oeliander.Core/OelianderUI.Core.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>OelianderUI.Core</RootNamespace>
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Configurations>Debug;Release;DirView</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
