--- a/Oeliander/Oeliander/OelianderUI.csproj
+++ b/Oeliander/Oeliander/OelianderUI.csproj
@@ -8,7 +8,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>glorysprout.ico</ApplicationIcon>
-    <Configurations>Debug;Release;DirView</Configurations>
+    <Configurations>Debug;Release;DirView;WIP</Configurations>
   </PropertyGroup>
   
   <ItemGroup>
